6.may (ws)
      - new feature: every note can be microtuned +/- 200 cent via
        the note/chord properties dialog. The internal synthesizer is
        modified to allow proper playback.
5.may (la)
      - fix export of c major key to lilypond
4.may (ws)
      - progressivly shorten note stems of "wrong" direction; make
        this stylable
      - fix end detection of multi measure rests
      - allow for multiple shortcuts for actions when using
        QKeySequence::StandardKey
      (la)
      - export correct tempo in musicXML (sound tag)
      - fix lyrics separator alignment at end of page
      - change FileAssociation.nsh to handle document-style icon
3.may (ws)
      - fix layout of accidentals for small staves
      - fix size of cautionary time signatures for small staves
      - import key signature changes from midi files
      - added extended instruments.xml file from Magnus Johansson
      (db)
      - added new document-style icon for MuseScore
2.may (ws)
      - use platform independend QKeySequence::StandardKey for shortcut initialization
      - put only saved files on "open recent" list
      - fix pitch of transposing instruments
      - reworked internal fluid synthesizer:
         - do not process chorus/reverb if no sound is produced; this reduces
           the idle load on my processor from 10% to nearly 0%
         - Samples are only loaded from soundfont if needed. This speeds up
           startup and reduces the memory footprint escpecially
           when using large sound fonts.
         - converted to c++, added namespace protection
      (tb)
      - adding first update of Traditional Chinese (Taiwan) zh_TW locale made by benice
1.may (db)
      - Windows installer decompresses a Windows SoundFont and moves it to the
        MuseScore folder. Work is incomplete since the user must manually install 7-Zip first.
30.apr (lv)
      - MusicXML export of multiple-measure rest, including testfile testMultiMeasureRest.xml
      (db)