@@ -2,6 +2,9 @@
       - new feature: every note can be microtuned +/- 200 cent via
         the note/chord properties dialog. The internal synthesizer is
         modified to allow proper playback.
+      (db)
+      - Remove experimental SoundFont section from Windows installer
+      - Make default piano SoundFont work with all GM instruments
 5.may (la)
       - fix export of c major key to lilypond
 4.may (ws)
